--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "postcss-loader": "^8.1.1",
+    "react-router-dom": "^7.1.5",
+    "tailwindcss": "^4.0.6"
   }
 }
