--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "cra-template": "1.2.0",
+    "firebase": "^11.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
@@ -35,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
     "postcss-loader": "^8.1.1",
